Remove usage of deprecated constructor for Java primitives.
Instead of e.g. new Integer(), we use the drop-in replacement
Integer.valueOf().