@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -103,6 +103,6 @@ public class BooleanTest extends AbstractEngineTest {
 	//
 	////////////////////////////////////////////////////////////////////////////
 	private void check_boolean(String expression, boolean expected) throws Exception {
-		assertEquals(new Boolean(expected), evaluateExpression(expression, "boolean"));
+		assertEquals(Boolean.valueOf(expected), evaluateExpression(expression, "boolean"));
 	}
 }
