@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -51,6 +51,6 @@ public class CharTest extends AbstractEngineTest {
 	////////////////////////////////////////////////////////////////////////////
 	private void check_char(String expression, char expected) throws Exception {
 		Object actual = evaluateExpression(expression, "char");
-		assertEquals(new Character(expected), actual);
+		assertEquals(Character.valueOf(expected), actual);
 	}
 }
