@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -223,7 +223,7 @@ public class IntegerTest extends AbstractEngineTest {
 	////////////////////////////////////////////////////////////////////////////
 	private void check_short(String expression, short expected) throws Exception {
 		Object actual = evaluateExpression(expression, "short");
-		assertEquals(new Short(expected), actual);
+		assertEquals(Short.valueOf(expected), actual);
 	}
 
 	private void check_int(String expression, int expected) throws Exception {
