@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011 Google, Inc.
+ * Copyright (c) 2011, 2023 Google, Inc.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -90,7 +90,7 @@ public class DatePropertyEditorTest extends AbstractTextPropertyEditorTest {
 				"public class Test extends JPanel {",
 				"  public Test() {",
 				"    DateComponent component = new DateComponent();",
-				"    component.setDate(new Date(" + new Long(currentTimeMillis).toString() + "L));",
+				"    component.setDate(new Date(" + Long.valueOf(currentTimeMillis).toString() + "L));",
 				"    add(component);",
 				"  }",
 				"}");
@@ -144,7 +144,7 @@ public class DatePropertyEditorTest extends AbstractTextPropertyEditorTest {
 						"public class Test extends JPanel {",
 						"  public Test() {",
 						"    DateComponent component = new DateComponent();",
-						"    component.setDate(new Date(" + new Long(currentTimeMillis).toString() + "L));",
+						"    component.setDate(new Date(" + Long.valueOf(currentTimeMillis).toString() + "L));",
 						"    add(component);",
 						"  }",
 						"}");
